--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
+  <meta name="description" content="MACode ID, https://www.macodeid.com/">
 
   <title>Aya Lamsi</title>
 
