--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 
 <head>
   
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TD6QJZ4');</script>
+<!-- End Google Tag Manager -->
+  
     <!-- Google tag (gtag.js) gggg-->
-<--!script async src="https://www.googletagmanager.com/gtag/js?id=G-2T981M60Z1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2T981M60Z1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-2T981M60Z1');
-</script-->
+</script>
   <!-- END Google tag (gtag.js) -->
   
-  <!--new Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9B165HK3T4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-9B165HK3T4');
-</script>
-    <!-- END Google tag (gtag.js) -->
-  
+ 
  
   
   <meta charset="UTF-8">
@@ -59,13 +57,10 @@
 
 <body class="theme-blue">
   
-   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KNZ6N4Z');</script>
-<!-- End Google Tag Manager -->
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TD6QJZ4"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
   <!-- Back to top button -->
   <div class="btn-back_to_top">
