--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
       <div class="container">
         <a href="" class="navbar-brand"></a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
+        <!--button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
-        </button>
+        </button-->
         <div class="collapse navbar-collapse" id="main-navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
