--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
       <div class="container">
         <a href="" class="navbar-brand"></a>
-        <!--button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
-        </button-->
+        </button>
         <div class="collapse navbar-collapse" id="main-navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -97,11 +97,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
           </ul>
-          <ul class="nav ml-auto">
+          <!--ul class="nav ml-auto">
             <li class="nav-item">
               <button class="btn btn-fab btn-theme no-shadow">En</button>
             </li>
-          </ul>
+          </ul-->
         </div>
       </div>
     </div> <!-- End Navbar -->
