--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
           </ul>
-         
+         <ul class="nav ml-auto">
+            <li class="nav-item">
+              <button class="btn btn-fab btn-theme no-shadow">En</button>
+            </li>
+          </ul>
         </div>
       </div>
     </div> <!-- End Navbar -->
