--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta name="description" content="MACode ID, https://www.macodeid.com/">
+  <meta name="description" content="Découvrez le portfolio de Aya Lamsi ,découvrez comment elle utilise des techniques avancées pour transformer des données complexes en insights clairs et exploitables pour des entreprises de toutes tailles. Explorez ses projets précédents et son approche pour résoudre les problèmes complexes de données. Visitez son portfolio en ligne dès maintenant pour en savoir plus.">
 
   <title>Aya Lamsi</title>
 
