--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta name="description" content="Découvrez le portfolio de Aya Lamsi ,découvrez comment elle utilise des techniques avancées pour transformer des données complexes en insights clairs et exploitables pour des entreprises de toutes tailles. Explorez ses projets précédents et son approche pour résoudre les problèmes complexes de données. Visitez son portfolio en ligne dès maintenant pour en savoir plus.">
+  <meta name="description" content="Discover the portfolio of Aya Lamsi, a master's student in business intelligence at iset rades and learn how she uses advanced techniques like ETL to transform complex data into clear and actionable insights for different domains. Explore her previous projects and her approach to solving complex data problems. Visit her online portfolio now to learn more.">
 
   <title>Aya Lamsi</title>
 
