--- a/index.html
+++ b/index.html
@@ -693,10 +693,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p>Follow me</p>
             <hr class="divider">
             <ul class="list-unstyled">
-              <li><span class="ti-instagram"></span> <a href="#">Instagram</a></li>
-              <li><span class="ti-facebook"></span> <a href="#">Facebook</a></li>
-              <li><span class="ti-twitter"></span> <a href="#">Twitter</a></li>
-              <li><span class="ti-youtube"></span> <a href="#">Youtube</a></li>
+              <li><span class="ti-instagram"></span> <a href="https://instagram.com/eya_lamssi?igshid=ZDdkNTZiNTM=">Instagram</a></li>
+              <li><span class="ti-facebook"></span> <a href="https://www.facebook.com/profile.php?id=100017184070276&mibextid=ZbWKwL">Facebook</a></li>
+              <li><span class="ti-linkedin"></span> <a href="https://www.linkedin.com/in/ayalamsi/">Linkedin</a></li>
+              
             </ul>
           </div>
         </div>
