--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="footer-info">
             <p>Where to find me</p>
             <hr class="divider">
-            <p class="fs-large fg-white">1600 Amphitheatre Parkway Mountain View, California 94043 US</p>
+            <p class="fs-large fg-white">Ben Arous, Tunis, Tunisia</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 py-3">
@@ -713,8 +713,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="row justify-content-center mt-3">
         <div class="col-12">
-          <p class="text-center mb-0 mt-4">Copyright &copy;2023. All right reserved | This template is made with <span
-              class="ti-heart fg-theme-red"></p>
+          <p class="text-center mb-0 mt-4">Copyright &copy;2023</p>
         </div>
         </div-->
         <!--div class="row justify-content-center mt-3">
@@ -730,8 +729,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </form>
         </div>
         <div class="col-12">
-          <p class="text-center mb-0 mt-4">Copyright &copy;2020. All right reserved | This template is made with <span
-              class="ti-heart fg-theme-red"></span> by <a href="https://www.macodeid.com/">MACode ID</a></p>
+          <p class="text-center mb-0 mt-4">Copyright &copy;2023 </p>
         </div>
       </div-->
       </div>
