--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <span class="ti-paint-bucket"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">Web Design</h4>
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <h4 class="fg-theme">Mobile Developpement</h4>
+              <p>Creation of mobile application</p>
             </div>
           </div>
         </div>
@@ -295,22 +295,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <span class="ti-search"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">SEO</h4>
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <h4 class="fg-theme">ETL</h4>
+              <p>Transform complex data into clear and actionable insights</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 col-xl-3">
-          <div class="card card-service wow fadeInUp">
-            <div class="icon">
-              <span class="ti-vector"></span>
-            </div>
-            <div class="caption">
-              <h4 class="fg-theme">UI/UX Design</h4>
-              <p>There are many variations of passages of Lorem Ipsum available</p>
-            </div>
-          </div>
-        </div>
+       
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
@@ -318,7 +308,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Web Development</h4>
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <p>Creation of website (Frontend & Backend)</p>
             </div>
           </div>
         </div>
@@ -412,9 +402,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
         
-        <div class="col-12 text-center py-3 wow fadeInUp">
+        <!--div class="col-12 text-center py-3 wow fadeInUp">
           <a href="blog-fullbar.html" class="btn btn-theme">See All Post</a>
-        </div>
+        </div-->
       </div>
     </div>
   </div> <!-- End blog -->
