--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-paint-bucket"></span>
+              <span class="ti-mobile"></span>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Mobile Developpement</h4>
@@ -455,7 +455,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="grid-item apps wow zoomIn">
           <div class="img-place" data-src="assets/img/work/work-1.jpg" data-fancybox
             data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
-            <img src="assets/img/work/work-1.jpg" alt="">
+            <img src="assets/img/work/work-1.jpg" alt="#">
             <div class="img-caption">
               <h5 class="fg-theme">Mobile Travel App</h5>
               <p>Travel, Discovery</p>
