--- a/index.html
+++ b/index.html
@@ -304,6 +304,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
+              <span class="ti-search"></span>
+            </div>
+            <div class="caption">
+              <h4 class="fg-theme">Excel Dashboard</h4>
+              <p>Transform complex data into clear graphics</p>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-md-6 col-lg-4 col-xl-3">
+          <div class="card card-service wow fadeInUp">
+            <div class="icon">
               <span class="ti-desktop"></span>
             </div>
             <div class="caption">
