--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="row">
         <div class="col-lg-4 py-3">
           <div class="img-place wow fadeInUp">
-            <img src="assets/img/aya.png" alt="Photo Profile">
+            <img src="assets/img/aboutPic1.jpg" alt="Photo Profile">
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
